Fix(Java): Convert set initializer to Java 11